fix: missing padding

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -63,6 +63,7 @@
       width: 100%;
       max-width: 50em;
       margin: 0 auto;
+      padding: 0.5em;
     }
 
     main {
